limiting image size to avoid overlap with sidebar

--- a/src/files/css/style-override.css
+++ b/src/files/css/style-override.css
@@ -15,7 +15,8 @@ body, input, textarea, select {
 }
 
 img {
-    margin: 20px 20px;
+    margin: 10px 10px;
+    max-width: 900px;
 }
 
 img.center {
